Часть 004. FP, Lambda, Stream API / 1. Labmda / 3. Jdk 1.9, 1.10 Нововведения. / 1. Collection API Улучшения[#220002]