@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -13,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsAnd3Cells() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -28,7 +29,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsAnd1Cells() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5),
+                List.of(1, 2, 3, 4, 5),
                 1
         );
         int[][] expect = {
@@ -45,7 +46,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsAnd7Cells() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 7
         );
         int[][] expect = {
