@@ -12,20 +12,22 @@ import static org.junit.Assert.*;
 public class ConvertListTest {
     @Test
     public void whenTwoList() {
-        List<int[]> in = new ArrayList<>();
-        in.add(new int[] {1});
-        in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<int[]> in = List.of(
+                (new int[]{1}),
+                (new int[]{2, 3})
+        );
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
     @Test
     public void when3ListAndOneOfThemEmpty() {
-        List<int[]> in = new ArrayList<>();
-        in.add(new int[] {1, 2, 3, 4, 5});
-        in.add(new int[] {});
-        in.add(new int[] {6, 7});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
+        List<int[]> in = List.of(
+                (new int[]{1, 2, 3, 4, 5}),
+                (new int[]{}),
+                (new int[]{6, 7})
+        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
