@@ -9,24 +9,24 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.sortAsc(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.sortAsc(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void sortAsc() {
-        List<String> input = Arrays.asList("k2", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2");
+        List<String> input = List.of("k2", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2");
         List<String> result = Departments.sortAsc(input);
         assertThat(result, is(expect));
     }
@@ -34,15 +34,15 @@ public class DepartmentsTest {
 
     @Test
     public void sortDesc() {
-        List<String> input = Arrays.asList("k1/sk1", "k2");
-        List<String> expect = Arrays.asList("k2", "k1", "k1/sk1");
+        List<String> input = List.of("k1/sk1", "k2");
+        List<String> expect = List.of("k2", "k1", "k1/sk1");
         List<String> result = Departments.sortDesc(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void sortDescLargeTest() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -52,7 +52,7 @@ public class DepartmentsTest {
                 "K2/SK1",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK2",
@@ -69,7 +69,7 @@ public class DepartmentsTest {
 
     @Test
     public void sortDescLargeTestWithMissed() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "K1/SK1",
                 "K1/SK1/SSK1",
                 "K1/SK1/SSK2",
@@ -77,7 +77,7 @@ public class DepartmentsTest {
                 "K2",
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK2",
