@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.core.Is.is;
@@ -11,9 +12,10 @@ import static org.junit.Assert.*;
 public class UserTest {
     @Test
     public void whenAsc() {
-        Set<User> users = new TreeSet<>();
-        users.add(new User("Petr", 32));
-        users.add(new User("Ivan", 31));
+        Set<User> users = new TreeSet<>(Set.of(
+                new User("Petr", 32),
+                new User("Ivan", 31)
+        ));
         Iterator<User> it = users.iterator();
         assertThat(it.next(), is(new User("Ivan", 31)));
         assertThat(it.next(), is(new User("Petr", 32)));
@@ -34,10 +36,10 @@ public class UserTest {
         User boris = new User("Boris", 20);
         User alex = new User("Alex", 30);
         Comparator<User> comparator = new SortUserByNameNaturalOrder();
-        List<User> list = Arrays.asList(amber, boris, alex);
-        List<User> expect = Arrays.asList(alex, amber, boris);
-        list.sort(comparator);
-        assertThat(list, is(expect));
+        List<User> list = List.of(amber, boris, alex);
+        List<User> expect = List.of(alex, amber, boris);
+        List<User> result = list.stream().sorted(comparator).collect(Collectors.toList());
+        assertThat(result, is(expect));
     }
 
     @Test
@@ -46,10 +48,10 @@ public class UserTest {
         User boris = new User("Boris", 20);
         User alex = new User("Alex", 30);
         Comparator<User> comparator = new SortUserByNameReverseOrder();
-        List<User> list = Arrays.asList(amber, boris, alex);
-        List<User> expect = Arrays.asList(boris, amber, alex);
-        list.sort(comparator);
-        assertThat(list, is(expect));
+        List<User> list = List.of(amber, boris, alex);
+        List<User> expect = List.of(boris, amber, alex);
+        List<User> result = list.stream().sorted(comparator).collect(Collectors.toList());
+        assertThat(result, is(expect));
     }
 
     @Test
@@ -58,10 +60,10 @@ public class UserTest {
         User boris = new User("Boris", 20);
         User alex = new User("Alex", 30);
         Comparator<User> comparator = new SortUserByAgeNaturalOrder();
-        List<User> list = Arrays.asList(amber, boris, alex);
-        List<User> expect = Arrays.asList(boris, amber, alex);
-        list.sort(comparator);
-        assertThat(list, is(expect));
+        List<User> list = List.of(amber, boris, alex);
+        List<User> expect = List.of(boris, amber, alex);
+        List<User> result = list.stream().sorted(comparator).collect(Collectors.toList());
+        assertThat(result, is(expect));
     }
 
     @Test
@@ -70,10 +72,10 @@ public class UserTest {
         User boris = new User("Boris", 20);
         User alex = new User("Alex", 30);
         Comparator<User> comparator = new SortUserByAgeReverseOrder();
-        List<User> list = Arrays.asList(amber, boris, alex);
-        List<User> expect = Arrays.asList(alex, amber, boris);
-        list.sort(comparator);
-        assertThat(list, is(expect));
+        List<User> list = List.of(amber, boris, alex);
+        List<User> expect = List.of(alex, amber, boris);
+        List<User> result = list.stream().sorted(comparator).collect(Collectors.toList());
+        assertThat(result, is(expect));
     }
 
     @Test
@@ -82,10 +84,10 @@ public class UserTest {
         User boris = new User("Boris", 20);
         User alex = new User("Alex", 25);
         Comparator<User> comparator = new SortUserByAgeNaturalOrder().thenComparing(new SortUserByNameReverseOrder());
-        List<User> list = Arrays.asList(amber, boris, alex);
-        List<User> expect = Arrays.asList(boris, amber, alex);
-        list.sort(comparator);
-        assertThat(list, is(expect));
+        List<User> list = List.of(amber, boris, alex);
+        List<User> expect = List.of(boris, amber, alex);
+        List<User> result = list.stream().sorted(comparator).collect(Collectors.toList());
+        assertThat(result, is(expect));
     }
 
     @Test
@@ -94,9 +96,9 @@ public class UserTest {
         User alex = new User("Alex", 25);
         User alex2 = new User("Alex", 30);
         Comparator<User> comparator = new SortUserByNameNaturalOrder().thenComparing(new SortUserByAgeReverseOrder());
-        List<User> list = Arrays.asList(boris, alex, alex2);
-        List<User> expect = Arrays.asList(alex2, alex, boris);
-        list.sort(comparator);
-        assertThat(list, is(expect));
+        List<User> list = List.of(boris, alex, alex2);
+        List<User> expect = List.of(alex2, alex, boris);
+        List<User> result = list.stream().sorted(comparator).collect(Collectors.toList());
+        assertThat(result, is(expect));
     }
 }
